// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Router get / 1`] = `
Object {
  "@type": "WebPage",
  "hasPart": Object {
    "@type": "WPHeader",
    "hasPart": Array [
      Object {
        "@type": "SiteNavigationElement",
        "name": "About",
        "url": "/about",
      },
      Object {
        "@type": "SiteNavigationElement",
        "name": "Docs",
        "url": "/get-started",
      },
      Array [
        Object {
          "@type": "SiteNavigationElement",
          "name": "My first blog",
          "url": "/blogs/blog1",
        },
        Object {
          "@type": "SiteNavigationElement",
          "name": "My second blog",
          "url": "/blogs/blog2",
        },
      ],
    ],
    "headline": "Sambal",
    "potentialAction": Array [
      Object {
        "@type": "DownloadAction",
        "target": "https://github.com/chen4119/sambal",
      },
    ],
  },
  "mainEntity": Object {
    "@type": "SoftwareSourceCode",
    "description": "A linked data static site generator",
    "headline": "A linked data static site generator",
    "name": "Sambal",
    "text": "<need to <> escape>",
  },
  "url": "/",
}
`;

exports[`Router get /alias/subfolder/blog1 1`] = `
Object {
  "@type": "WebPage",
  "description": "alias folder",
  "mainEntity": Object {
    "@type": "BlogPosting",
    "author": Object {
      "@type": "Person",
      "email": "smitty123@hotmail.com",
      "familyName": "Smith",
      "givenName": "John",
      "hasOfferCatalog": Object {
        "@type": "OfferCatalog",
        "itemListElement": Array [
          Object {
            "@context": Object {
              "@base": "https://sambal.dev",
              "@vocab": "https://schema.org/",
            },
            "@id": "/schema.json",
            "@type": "SoftwareSourceCode",
            "alternativeHeadline": "A linked data static site generator",
            "codeRepository": "https://github.com/chen4119/sambal",
            "headline": "Sambal",
            "potentialAction": Array [
              Object {
                "@type": "Action",
                "name": "Get Started",
                "target": "/docs/get-started",
              },
            ],
            "programmingLanguage": "Typescript",
            "usageInfo": Array [
              Object {
                "@type": "HowToTip",
                "alternativeHeadline": "Search engine optimized from day one",
                "headline": "Schema.org json-ld as the content model",
              },
              Object {
                "@type": "HowToTip",
                "alternativeHeadline": "Share your json-ld just like how you share your webpage",
                "headline": "Generate HTML and schema.org json-ld files",
              },
              Object {
                "@type": "HowToTip",
                "alternativeHeadline": "Automatically convert image to schema.org ImageObject and generate thumbnails",
                "headline": "Image to schema.org ImageObject",
              },
              Object {
                "@type": "HowToTip",
                "alternativeHeadline": "Using schema.org means never get locked into any vendor specific content model",
                "headline": "Build universal themes",
              },
            ],
          },
        ],
        "name": "Open source software",
      },
      "name": "John Smith",
    },
    "dateCreated": 2019-10-26T00:00:00.000Z,
    "dateModified": 2019-10-26T00:00:00.000Z,
    "encodingFormat": "text/markdown",
    "headline": "My first blog",
    "keywords": Array [
      "rxjs",
      "java script",
    ],
    "position": 1,
    "text": "

Hello world",
  },
  "url": "/alias/subfolder/blog1",
}
`;

exports[`Router get /blogs/blog1 1`] = `
Object {
  "@type": "WebPage",
  "hasPart": Array [
    Object {
      "@type": "SiteNavigationElement",
      "name": "About",
      "url": "/about",
    },
  ],
  "mainEntity": Object {
    "@type": "BlogPosting",
    "author": Object {
      "@type": "Person",
      "email": "smitty123@hotmail.com",
      "familyName": "Smith",
      "givenName": "John",
      "hasOfferCatalog": Object {
        "@type": "OfferCatalog",
        "itemListElement": Array [
          Object {
            "@context": Object {
              "@base": "https://sambal.dev",
              "@vocab": "https://schema.org/",
            },
            "@id": "/schema.json",
            "@type": "SoftwareSourceCode",
            "alternativeHeadline": "A linked data static site generator",
            "codeRepository": "https://github.com/chen4119/sambal",
            "headline": "Sambal",
            "potentialAction": Array [
              Object {
                "@type": "Action",
                "name": "Get Started",
                "target": "/docs/get-started",
              },
            ],
            "programmingLanguage": "Typescript",
            "usageInfo": Array [
              Object {
                "@type": "HowToTip",
                "alternativeHeadline": "Search engine optimized from day one",
                "headline": "Schema.org json-ld as the content model",
              },
              Object {
                "@type": "HowToTip",
                "alternativeHeadline": "Share your json-ld just like how you share your webpage",
                "headline": "Generate HTML and schema.org json-ld files",
              },
              Object {
                "@type": "HowToTip",
                "alternativeHeadline": "Automatically convert image to schema.org ImageObject and generate thumbnails",
                "headline": "Image to schema.org ImageObject",
              },
              Object {
                "@type": "HowToTip",
                "alternativeHeadline": "Using schema.org means never get locked into any vendor specific content model",
                "headline": "Build universal themes",
              },
            ],
          },
        ],
        "name": "Open source software",
      },
      "name": "John Smith",
    },
    "dateCreated": 2019-10-26T00:00:00.000Z,
    "dateModified": 2019-10-26T00:00:00.000Z,
    "encodingFormat": "text/markdown",
    "headline": "My first blog",
    "keywords": Array [
      "rxjs",
      "java script",
    ],
    "position": 1,
    "text": "

Hello world",
  },
  "url": "/blogs/blog1",
}
`;
